# resufancy

./: .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
scripts/: build.sh  install-wkhtmltox.sh  lint.sh  release.sh
src/: error.rs  generator.rs  html_compiler.rs  initializer.rs  lib.rs  loader.rs  main.rs  pdf_compiler.rs  resume.rs  template.rs  templates.rs
src/commands/: args.rs  build.rs  initialize.rs  mod.rs
src/error/: mod.rs  sass_error.rs
templates/basic/: resume.pug  style.css
